--- a/client/src/drafts/index.html
+++ b/client/src/drafts/index.html
@@ -15,81 +15,209 @@
     HEADER
   </header>
 
-  <main class="grid">
+  <main>
 
-    <article class="card">
-      <img class="photo" src="home.jpeg" alt="photo">
-      <div>
-        <h3 class="title">{title}</h3>
-        <p class="rooms">Кол-во комнат: {rooms}</p>
-        <address class="address">Адрес: {address}</address>
-        <p class="area">Площадь: {area} {unit}</p>
-        <hr class="separator">
-        <h4 class="contacts-header">Контактная информация:</h4>
-        <p class="contacts-info">{firstName} {middleName} {lastName}</p>
-        <span class="like">LIKE</span>
-      </div>
-    </article>
+    <div class="grid">
 
-    <article class="card">
-      <img class="photo" src="home.jpeg" alt="photo">
-      <div>
-        <h3 class="title">{title}</h3>
-        <p class="rooms">Кол-во комнат: {rooms}</p>
-        <address class="address">Адрес: {address}</address>
-        <p class="area">Площадь: {area} {unit}</p>
-        <hr class="separator">
-        <h4 class="contacts-header">Контактная информация:</h4>
-        <p class="contacts-info">{firstName} {middleName} {lastName}</p>
-        <span class="like">LIKE</span>
-      </div>
-    </article>
+      <article class="card">
+        <div class="images">
+          <img class="photo" src="1.jpg" alt="photo">
+          <svg class="like" xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24">
+            <path d="M0 0h24v24H0V0zm0 0h24v24H0V0z" fill="none" />
+            <path
+              d="M9 21h9c.83 0 1.54-.5 1.84-1.22l3.02-7.05c.09-.23.14-.47.14-.73v-2c0-1.1-.9-2-2-2h-6.31l.95-4.57.03-.32c0-.41-.17-.79-.44-1.06L14.17 1 7.58 7.59C7.22 7.95 7 8.45 7 9v10c0 1.1.9 2 2 2zM9 9l4.34-4.34L12 10h9v2l-3 7H9V9zM1 9h4v12H1z" />
+          </svg>
+        </div>
+        <div class="info">
+          <h3 class="title">{title}</h3>
+          <p class="rooms">Кол-во комнат: {rooms}</p>
+          <p class="address">Адрес: {address}</p>
+          <p class="area">Площадь: {area} {unit}</p>
+          <hr class="separator">
+          <h4 class="contacts-header">Контактная информация:</h4>
+          <p class="contacts-info">{firstName} {middleName} {lastName}</p>
+        </div>
+      </article>
 
-    <article class="card">
-      <img class="photo" src="home.jpeg" alt="photo">
-      <div>
-        <h3 class="title">{title}</h3>
-        <p class="rooms">Кол-во комнат: {rooms}</p>
-        <address class="address">Адрес: {address}</address>
-        <p class="area">Площадь: {area} {unit}</p>
-        <hr class="separator">
-        <h4 class="contacts-header">Контактная информация:</h4>
-        <p class="contacts-info">{firstName} {middleName} {lastName}</p>
-        <span class="like">LIKE</span>
-      </div>
-    </article>
 
-    <article class="card">
-      <img class="photo" src="home.jpeg" alt="photo">
-      <div>
-        <h3 class="title">{title}</h3>
-        <p class="rooms">Кол-во комнат: {rooms}</p>
-        <address class="address">Адрес: {address}</address>
-        <p class="area">Площадь: {area} {unit}</p>
-        <hr class="separator">
-        <h4 class="contacts-header">Контактная информация:</h4>
-        <p class="contacts-info">{firstName} {middleName} {lastName}</p>
-        <span class="like">LIKE</span>
-      </div>
-    </article>
+      <article class="card">
+        <div class="images">
+          <img class="photo" src="2.jpg" alt="photo">
+          <svg class="like" xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24">
+            <path d="M0 0h24v24H0V0zm0 0h24v24H0V0z" fill="none" />
+            <path
+              d="M9 21h9c.83 0 1.54-.5 1.84-1.22l3.02-7.05c.09-.23.14-.47.14-.73v-2c0-1.1-.9-2-2-2h-6.31l.95-4.57.03-.32c0-.41-.17-.79-.44-1.06L14.17 1 7.58 7.59C7.22 7.95 7 8.45 7 9v10c0 1.1.9 2 2 2zM9 9l4.34-4.34L12 10h9v2l-3 7H9V9zM1 9h4v12H1z" />
+          </svg>
+        </div>
+        <div class="info">
+          <h3 class="title">{title}</h3>
+          <p class="rooms">Кол-во комнат: {rooms}</p>
+          <p class="address">Адрес: {address}</p>
+          <p class="area">Площадь: {area} {unit}</p>
+          <hr class="separator">
+          <h4 class="contacts-header">Контактная информация:</h4>
+          <p class="contacts-info">{firstName} {middleName} {lastName}</p>
+        </div>
+      </article>
+      <article class="card">
+        <div class="images">
+          <img class="photo" src="3.jpg" alt="photo">
+          <svg class="like" xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24">
+            <path d="M0 0h24v24H0V0zm0 0h24v24H0V0z" fill="none" />
+            <path
+              d="M9 21h9c.83 0 1.54-.5 1.84-1.22l3.02-7.05c.09-.23.14-.47.14-.73v-2c0-1.1-.9-2-2-2h-6.31l.95-4.57.03-.32c0-.41-.17-.79-.44-1.06L14.17 1 7.58 7.59C7.22 7.95 7 8.45 7 9v10c0 1.1.9 2 2 2zM9 9l4.34-4.34L12 10h9v2l-3 7H9V9zM1 9h4v12H1z" />
+          </svg>
+        </div>
+        <div class="info">
+          <h3 class="title">{title}</h3>
+          <p class="rooms">Кол-во комнат: {rooms}</p>
+          <p class="address">Адрес: {address}</p>
+          <p class="area">Площадь: {area} {unit}</p>
+          <hr class="separator">
+          <h4 class="contacts-header">Контактная информация:</h4>
+          <p class="contacts-info">{firstName} {middleName} {lastName}</p>
+        </div>
+      </article>
+      <article class="card">
+        <div class="images">
+          <img class="photo" src="2.jpg" alt="photo">
+          <svg class="like" xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24">
+            <path d="M0 0h24v24H0V0zm0 0h24v24H0V0z" fill="none" />
+            <path
+              d="M9 21h9c.83 0 1.54-.5 1.84-1.22l3.02-7.05c.09-.23.14-.47.14-.73v-2c0-1.1-.9-2-2-2h-6.31l.95-4.57.03-.32c0-.41-.17-.79-.44-1.06L14.17 1 7.58 7.59C7.22 7.95 7 8.45 7 9v10c0 1.1.9 2 2 2zM9 9l4.34-4.34L12 10h9v2l-3 7H9V9zM1 9h4v12H1z" />
+          </svg>
+        </div>
+        <div class="info">
+          <h3 class="title">{title}</h3>
+          <p class="rooms">Кол-во комнат: {rooms}</p>
+          <p class="address">Адрес: {address}</p>
+          <p class="area">Площадь: {area} {unit}</p>
+          <hr class="separator">
+          <h4 class="contacts-header">Контактная информация:</h4>
+          <p class="contacts-info">{firstName} {middleName} {lastName}</p>
+        </div>
+      </article>
+      <article class="card">
+        <div class="images">
+          <img class="photo" src="3.jpg" alt="photo">
+          <svg class="like" xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24">
+            <path d="M0 0h24v24H0V0zm0 0h24v24H0V0z" fill="none" />
+            <path
+              d="M9 21h9c.83 0 1.54-.5 1.84-1.22l3.02-7.05c.09-.23.14-.47.14-.73v-2c0-1.1-.9-2-2-2h-6.31l.95-4.57.03-.32c0-.41-.17-.79-.44-1.06L14.17 1 7.58 7.59C7.22 7.95 7 8.45 7 9v10c0 1.1.9 2 2 2zM9 9l4.34-4.34L12 10h9v2l-3 7H9V9zM1 9h4v12H1z" />
+          </svg>
+        </div>
+        <div class="info">
+          <h3 class="title">{title}</h3>
+          <p class="rooms">Кол-во комнат: {rooms}</p>
+          <p class="address">Адрес: {address}</p>
+          <p class="area">Площадь: {area} {unit}</p>
+          <hr class="separator">
+          <h4 class="contacts-header">Контактная информация:</h4>
+          <p class="contacts-info">{firstName} {middleName} {lastName}</p>
+        </div>
+      </article>
+      <article class="card">
+        <div class="images">
+          <img class="photo" src="1.jpg" alt="photo">
+          <svg class="like" xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24">
+            <path d="M0 0h24v24H0V0zm0 0h24v24H0V0z" fill="none" />
+            <path
+              d="M9 21h9c.83 0 1.54-.5 1.84-1.22l3.02-7.05c.09-.23.14-.47.14-.73v-2c0-1.1-.9-2-2-2h-6.31l.95-4.57.03-.32c0-.41-.17-.79-.44-1.06L14.17 1 7.58 7.59C7.22 7.95 7 8.45 7 9v10c0 1.1.9 2 2 2zM9 9l4.34-4.34L12 10h9v2l-3 7H9V9zM1 9h4v12H1z" />
+          </svg>
+        </div>
+        <div class="info">
+          <h3 class="title">{title}</h3>
+          <p class="rooms">Кол-во комнат: {rooms}</p>
+          <p class="address">Адрес: {address}</p>
+          <p class="area">Площадь: {area} {unit}</p>
+          <hr class="separator">
+          <h4 class="contacts-header">Контактная информация:</h4>
+          <p class="contacts-info">{firstName} {middleName} {lastName}</p>
+        </div>
+      </article>
+      <article class="card">
+        <div class="images">
+          <img class="photo" src="3.jpg" alt="photo">
+          <svg class="like" xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24">
+            <path d="M0 0h24v24H0V0zm0 0h24v24H0V0z" fill="none" />
+            <path
+              d="M9 21h9c.83 0 1.54-.5 1.84-1.22l3.02-7.05c.09-.23.14-.47.14-.73v-2c0-1.1-.9-2-2-2h-6.31l.95-4.57.03-.32c0-.41-.17-.79-.44-1.06L14.17 1 7.58 7.59C7.22 7.95 7 8.45 7 9v10c0 1.1.9 2 2 2zM9 9l4.34-4.34L12 10h9v2l-3 7H9V9zM1 9h4v12H1z" />
+          </svg>
+        </div>
+        <div class="info">
+          <h3 class="title">{title}</h3>
+          <p class="rooms">Кол-во комнат: {rooms}</p>
+          <p class="address">Адрес: {address}</p>
+          <p class="area">Площадь: {area} {unit}</p>
+          <hr class="separator">
+          <h4 class="contacts-header">Контактная информация:</h4>
+          <p class="contacts-info">{firstName} {middleName} {lastName}</p>
+        </div>
+      </article>
+      <article class="card">
+        <div class="images">
+          <img class="photo" src="2.jpg" alt="photo">
+          <svg class="like" xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24">
+            <path d="M0 0h24v24H0V0zm0 0h24v24H0V0z" fill="none" />
+            <path
+              d="M9 21h9c.83 0 1.54-.5 1.84-1.22l3.02-7.05c.09-.23.14-.47.14-.73v-2c0-1.1-.9-2-2-2h-6.31l.95-4.57.03-.32c0-.41-.17-.79-.44-1.06L14.17 1 7.58 7.59C7.22 7.95 7 8.45 7 9v10c0 1.1.9 2 2 2zM9 9l4.34-4.34L12 10h9v2l-3 7H9V9zM1 9h4v12H1z" />
+          </svg>
+        </div>
+        <div class="info">
+          <h3 class="title">{title}</h3>
+          <p class="rooms">Кол-во комнат: {rooms}</p>
+          <p class="address">Адрес: {address}</p>
+          <p class="area">Площадь: {area} {unit}</p>
+          <hr class="separator">
+          <h4 class="contacts-header">Контактная информация:</h4>
+          <p class="contacts-info">{firstName} {middleName} {lastName}</p>
+        </div>
+      </article>
+      <article class="card">
+        <div class="images">
+          <img class="photo" src="1.jpg" alt="photo">
+          <svg class="like" xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24">
+            <path d="M0 0h24v24H0V0zm0 0h24v24H0V0z" fill="none" />
+            <path
+              d="M9 21h9c.83 0 1.54-.5 1.84-1.22l3.02-7.05c.09-.23.14-.47.14-.73v-2c0-1.1-.9-2-2-2h-6.31l.95-4.57.03-.32c0-.41-.17-.79-.44-1.06L14.17 1 7.58 7.59C7.22 7.95 7 8.45 7 9v10c0 1.1.9 2 2 2zM9 9l4.34-4.34L12 10h9v2l-3 7H9V9zM1 9h4v12H1z" />
+          </svg>
+        </div>
+        <div class="info">
+          <h3 class="title">{title}</h3>
+          <p class="rooms">Кол-во комнат: {rooms}</p>
+          <p class="address">Адрес: {address}</p>
+          <p class="area">Площадь: {area} {unit}</p>
+          <hr class="separator">
+          <h4 class="contacts-header">Контактная информация:</h4>
+          <p class="contacts-info">{firstName} {middleName} {lastName}</p>
+        </div>
+      </article>
+      <article class="card">
+        <div class="images">
+          <img class="photo" src="1.jpg" alt="photo">
+          <svg class="like" xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24">
+            <path d="M0 0h24v24H0V0zm0 0h24v24H0V0z" fill="none" />
+            <path
+              d="M9 21h9c.83 0 1.54-.5 1.84-1.22l3.02-7.05c.09-.23.14-.47.14-.73v-2c0-1.1-.9-2-2-2h-6.31l.95-4.57.03-.32c0-.41-.17-.79-.44-1.06L14.17 1 7.58 7.59C7.22 7.95 7 8.45 7 9v10c0 1.1.9 2 2 2zM9 9l4.34-4.34L12 10h9v2l-3 7H9V9zM1 9h4v12H1z" />
+          </svg>
+        </div>
+        <div class="info">
+          <h3 class="title">{title}</h3>
+          <p class="rooms">Кол-во комнат: {rooms}</p>
+          <p class="address">Адрес: {address}</p>
+          <p class="area">Площадь: {area} {unit}</p>
+          <hr class="separator">
+          <h4 class="contacts-header">Контактная информация:</h4>
+          <p class="contacts-info">{firstName} {middleName} {lastName}</p>
+        </div>
+      </article>
 
-    <article class="card">
-      <img class="photo" src="home.jpeg" alt="photo">
-      <div>
-        <h3 class="title">{title}</h3>
-        <p class="rooms">Кол-во комнат: {rooms}</p>
-        <address class="address">Адрес: {address}</address>
-        <p class="area">Площадь: {area} {unit}</p>
-        <hr class="separator">
-        <h4 class="contacts-header">Контактная информация:</h4>
-        <p class="contacts-info">{firstName} {middleName} {lastName}</p>
-        <span class="like">LIKE</span>
-      </div>
-    </article>
+    </div>
+
+    <button class="more">показать ещё</button>
 
   </main>
 
-  <button>Показать ещё</button>
 
   <footer>
     FOOTER
